// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib printer class Printer printCode() returns a Markdown codeblock with non supported message for unsupported type 1`] = `
"
\`\`\`graphql
\\"TestFooBarType\\" not supported
\`\`\`
"
`;

exports[`lib printer class Printer printCode() returns a Markdown graphql codeblock with type directive 1`] = `
"
\`\`\`graphql
TestDirective
\`\`\`
"
`;

exports[`lib printer class Printer printCode() returns a Markdown graphql codeblock with type enum 1`] = `
"
\`\`\`graphql
TestEnum
\`\`\`
"
`;

exports[`lib printer class Printer printCode() returns a Markdown graphql codeblock with type input 1`] = `
"
\`\`\`graphql
TestInput
\`\`\`
"
`;

exports[`lib printer class Printer printCode() returns a Markdown graphql codeblock with type interface 1`] = `
"
\`\`\`graphql
TestInterface
\`\`\`
"
`;

exports[`lib printer class Printer printCode() returns a Markdown graphql codeblock with type object 1`] = `
"
\`\`\`graphql
TestObject
\`\`\`
"
`;

exports[`lib printer class Printer printCode() returns a Markdown graphql codeblock with type query 1`] = `
"
\`\`\`graphql
TestQuery
\`\`\`
"
`;

exports[`lib printer class Printer printCode() returns a Markdown graphql codeblock with type scalar 1`] = `
"
\`\`\`graphql
TestScalar
\`\`\`
"
`;

exports[`lib printer class Printer printCode() returns a Markdown graphql codeblock with type union 1`] = `
"
\`\`\`graphql
TestUnion
\`\`\`
"
`;

exports[`lib printer class Printer printCodeArguments() returns a Markdown one line per formatted argument with default value surrounded by () 1`] = `
"(
  ParamWithDefault: string = defaultValue
  ParamNoDefault: any
)"
`;

exports[`lib printer class Printer printCodeDirective() returns a directive 1`] = `"directive @FooBar"`;

exports[`lib printer class Printer printCodeDirective() returns a directive with its arguments 1`] = `
"directive @FooBar(
arg: boolean
)"
`;

exports[`lib printer class Printer printCodeEnum() returns enum code structure 1`] = `
"enum EnumTypeName {
  one
  two
}"
`;

exports[`lib printer class Printer printCodeField() returns a field with its type 1`] = `
"FooBar: string
"
`;

exports[`lib printer class Printer printCodeField() returns a field with its type and arguments 1`] = `
"FooBar(
arg: boolean
): string
"
`;

exports[`lib printer class Printer printCodeScalar() returns scalar code structure 1`] = `"scalar ScalarTypeName"`;

exports[`lib printer class Printer printCodeType() returns an interface with its fields 1`] = `
"interface TestInterfaceName {
  one
  two
}"
`;

exports[`lib printer class Printer printCodeType() returns an object with its fields and interfaces 1`] = `
"type TestName implements TestInterfaceName {
  one
  two
}"
`;

exports[`lib printer class Printer printCodeUnion() returns union code structure 1`] = `"union UnionTypeName = one | two"`;

exports[`lib printer class Printer printDescription() return DEPRECATED tag is deprecated 1`] = `
"<sub><sup><Tag color=\\"#ffba00\\">DEPRECATED</Tag> Foobar</sup></sub>

Lorem ipsum"
`;

exports[`lib printer class Printer printDescription() returns the default text if no description 1`] = `"No description"`;

exports[`lib printer class Printer printDescription() returns the type description text 1`] = `"Lorem ipsum"`;

exports[`lib printer class Printer printHeader() returns a Docusaurus document header 1`] = `
"---
id: an-object-type-name
title: An Object Type Name
---
"
`;

exports[`lib printer class Printer printSection() returns Markdown ### section by default 1`] = `
"### section title

section content

"
`;

exports[`lib printer class Printer printSection() returns Markdown custom section level 1`] = `
"# section title

section content

"
`;

exports[`lib printer class Printer printSectionItem() returns Markdown #### link section with description 1`] = `
"#### [\`EntityTypeName\`](docs/graphql/objects/entity-type-name) 

Lorem ipsum
"
`;

exports[`lib printer class Printer printSectionItem() returns Markdown #### link section with field parameters 1`] = `
"#### [\`EntityTypeName\`](docs/graphql/objects/entity-type-name) 


- ##### \`ParameterTypeName\` 


"
`;

exports[`lib printer class Printer printSectionItem() returns Markdown #### link section with sub type 1`] = `
"#### \`EntityTypeName\` ([\`AnObjectType\`](docs/graphql/objects/an-object-type))


"
`;

exports[`lib printer class Printer printSectionItems() returns Markdown one line per item 1`] = `
"one

two

three"
`;

exports[`lib printer class Printer printType() returns a Markdown formatted Docusaurus content for input implementing interface 1`] = `
"header-input

export const Tag = ({children, color}) => (
<span
style={{
      backgroundColor: color,
      borderRadius: '2px',
      color: '#fff',
      padding: '0.2rem',
    }}>
{children}
</span>
);

Test Input

\`input\`

Fields
"
`;

exports[`lib printer class Printer printType() returns a Markdown formatted Docusaurus content for object implementing interface 1`] = `
"header-object

export const Tag = ({children, color}) => (
<span
style={{
      backgroundColor: color,
      borderRadius: '2px',
      color: '#fff',
      padding: '0.2rem',
    }}>
{children}
</span>
);

Test Object

\`object\`

Fields
"
`;

exports[`lib printer class Printer printType() returns a Markdown formatted Docusaurus content for query 1`] = `
"header-query

export const Tag = ({children, color}) => (
<span
style={{
      backgroundColor: color,
      borderRadius: '2px',
      color: '#fff',
      padding: '0.2rem',
    }}>
{children}
</span>
);

Test Query

\`query\`

Arguments

Type
"
`;

exports[`lib printer class Printer printType() returns a Markdown formatted Docusaurus content for type directive 1`] = `
"header-directive

export const Tag = ({children, color}) => (
<span
style={{
      backgroundColor: color,
      borderRadius: '2px',
      color: '#fff',
      padding: '0.2rem',
    }}>
{children}
</span>
);

Test Directive

\`directive\`

Arguments
"
`;

exports[`lib printer class Printer printType() returns a Markdown formatted Docusaurus content for type enum 1`] = `
"header-enum

export const Tag = ({children, color}) => (
<span
style={{
      backgroundColor: color,
      borderRadius: '2px',
      color: '#fff',
      padding: '0.2rem',
    }}>
{children}
</span>
);

Test Enum

\`enum\`

Values
"
`;

exports[`lib printer class Printer printType() returns a Markdown formatted Docusaurus content for type input 1`] = `
"header-input

export const Tag = ({children, color}) => (
<span
style={{
      backgroundColor: color,
      borderRadius: '2px',
      color: '#fff',
      padding: '0.2rem',
    }}>
{children}
</span>
);

Test Input

\`input\`

Fields
"
`;

exports[`lib printer class Printer printType() returns a Markdown formatted Docusaurus content for type interface 1`] = `
"header-interface

export const Tag = ({children, color}) => (
<span
style={{
      backgroundColor: color,
      borderRadius: '2px',
      color: '#fff',
      padding: '0.2rem',
    }}>
{children}
</span>
);

Test Interface

\`interface\`

Fields
"
`;

exports[`lib printer class Printer printType() returns a Markdown formatted Docusaurus content for type object 1`] = `
"header-object

export const Tag = ({children, color}) => (
<span
style={{
      backgroundColor: color,
      borderRadius: '2px',
      color: '#fff',
      padding: '0.2rem',
    }}>
{children}
</span>
);

Test Object

\`object\`

Fields
"
`;

exports[`lib printer class Printer printType() returns a Markdown formatted Docusaurus content for type scalar 1`] = `
"header-scalar

export const Tag = ({children, color}) => (
<span
style={{
      backgroundColor: color,
      borderRadius: '2px',
      color: '#fff',
      padding: '0.2rem',
    }}>
{children}
</span>
);

Test Scalar

\`scalar\`
"
`;

exports[`lib printer class Printer printType() returns a Markdown formatted Docusaurus content for type union 1`] = `
"header-union

export const Tag = ({children, color}) => (
<span
style={{
      backgroundColor: color,
      borderRadius: '2px',
      color: '#fff',
      padding: '0.2rem',
    }}>
{children}
</span>
);

Test Union

\`union\`

Possible types
"
`;

exports[`lib printer class Printer toLink() returns markdown link for GraphQL directive 1`] = `"[\`TestDirective\`](docs/graphql/directives/test-directive)"`;

exports[`lib printer class Printer toLink() returns markdown link for GraphQL enum 1`] = `"[\`TestEnum\`](docs/graphql/enums/test-enum)"`;

exports[`lib printer class Printer toLink() returns markdown link for GraphQL input 1`] = `"[\`TestInput\`](docs/graphql/inputs/test-input)"`;

exports[`lib printer class Printer toLink() returns markdown link for GraphQL interface 1`] = `"[\`TestInterface\`](docs/graphql/interfaces/test-interface)"`;

exports[`lib printer class Printer toLink() returns markdown link for GraphQL object 1`] = `"[\`TestObject\`](docs/graphql/objects/test-object)"`;

exports[`lib printer class Printer toLink() returns markdown link for GraphQL scalar 1`] = `"[\`TestScalar\`](docs/graphql/scalars/test-scalar)"`;

exports[`lib printer class Printer toLink() returns markdown link for GraphQL union 1`] = `"[\`TestUnion\`](docs/graphql/unions/test-union)"`;

exports[`lib printer class Printer toLink() returns markdown link surrounded by [] for GraphQL list/array 1`] = `"[\`TestObjectList\`](docs/graphql/objects/test-object-list)"`;

exports[`lib printer class Printer toLink() returns plain text for unknown entities 1`] = `"\`fooBar\`"`;
